# fix-future-annotations

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
fix_future_annotations/: __init__.py  _config.py  _main.py  _utils.py  _visitor.py  utils.py
tests/: test_fix_future_annotations.py
tests/samples/: as_name_import.py  as_name_import_fix.py  convert_string_constants.py  convert_string_constants_fix.py  exclude_lines.py  exclude_lines_fix.py  from_import.py  from_import_fix.py  import_aliases.py  import_aliases_fix.py  import_with_same_name.py  missing_import.py  missing_import2.py  missing_import2_fix.py  missing_import_fix.py  name_import.py  name_import_fix.py  remove_import.py  remove_import_fix.py  typing_extensions_import.py  typing_extensions_import2.py  typing_extensions_import2_fix.py  typing_extensions_import_fix.py
